"Passed all but 1 tests"

--- a/index.html
+++ b/index.html
@@ -58,7 +58,42 @@
       // 🧠 Implement a `getAllReversed` method which returns the ints in reverse order
       // ❗ WARNING: except for `getAllReversed`, methods must respect the order of the integers
       // ❗ WARNING: note that except for push and pop, the methods don't change the `ints` property
+          constructor(...args) {
+        this.ints = args;
+      }
 
+      getAll() {
+        return this.ints;
+      }
+
+      getEvens() {
+        return this.ints.filter(num => num % 2 === 0);
+      }
+
+      getNegatives() {
+        return this.ints.filter(num => num < 0);
+      }
+
+      getAllSquared() {
+        return this.ints.map(num => num * num);
+      }
+
+      pop() {
+        return this.ints.pop();
+      }
+
+      push(num) {
+        this.ints.push(num);
+        return this.ints;
+      }
+
+      getEveryNth(n) {
+        return this.ints.filter((num, index) => index % n === 0);
+      }
+
+      getAllReversed() {
+        return this.ints.slice().reverse();
+      }
     }
 
     // 👉 CHALLENGE 2 NerfGun
@@ -76,8 +111,39 @@
       //      * When engaging the safety, return "Safety enabled!"
       //      * When disengaging the safety, return "Safety disabled!"
       // 🌟 HINT: instances need to keep track of their maximum capacity as well as their current capacity
+            constructor(totalProjectiles) {
+      this.maxCapacity = totalProjectiles;
+      this.currentCapacity = totalProjectiles;
+      this.safety = true;
+      }
 
-    }
+      shoot() {
+      if (this.currentCapacity > 0 && !this.safety) {
+      this.currentCapacity--;
+      return "Bang!";
+      } else {
+      return "Click!";
+      }
+      }
+
+      reload(number) {
+      if (typeof number !== "number" || number <= 0) {
+      return "Error reloading!";
+      } else {
+      this.currentCapacity = Math.min(this.maxCapacity, this.currentCapacity + number);
+      return `${this.currentCapacity} projectiles left!`;
+      }
+      }
+
+      toggleSafety() {
+      this.safety = !this.safety;
+      if (this.safety) {
+      return "Safety enabled!";
+      } else {
+      return "Safety disabled!";
+      }
+      }
+}
 
     // 👉 CHALLENGE 3 EBook
     class EBook {
@@ -96,7 +162,23 @@
       // 🌟 HINT: remember about the `slice` method which strings and arrays have
       // ❗ Feel free to implement `back`, although this is not required nor graded
 
-    }
+            constructor(text, charsPerPage) {
+      this.text = text;
+      this.charsPerPage = charsPerPage;
+      this.currentPage = 0;
+      }
+
+      next() {
+      const start = this.currentPage * this.charsPerPage;
+      const end = start + this.charsPerPage;
+      const page = this.text.slice(start, end);
+      this.currentPage++;
+      if (page.length === 0) {
+      return null;
+      }
+      return page;
+      }
+}
 
     // 👉 CHALLENGE 4 AntFarm
     class AntFarm {
@@ -130,8 +212,51 @@
       //      console.log(list) // prints ["a"]
       // 👉 HINT: if you are not feeling confident with map and filter, solve the problem with for loops,
       //      and with the piece of mind of all tests passing, refactor to use map/filter
-
+      
+      constructor(...ants) {
+        this.ants = ants.map(name => ({ name, health: 100 }));
     }
+
+    work() {
+        if (this.ants.length === 0) {
+            return "No ants here. Did you work them to death?";
+        }
+
+        // Store the initial count of ants
+        const initialCount = this.ants.length;
+
+        // Reduce health for each ant
+        this.ants.forEach(ant => {
+            ant.health -= 20;
+        });
+
+        // Filter out dead ants
+        this.ants = this.ants.filter(ant => ant.health > 0);
+
+        // Check if all ants are dead after filtering
+        if (this.ants.length === 0) {
+            return "No ants here. Did you work them to death?";
+        }
+
+        return `${initialCount} ants starting work!`;
+    }
+
+    feed(name) {
+        let found = false;
+        this.ants.forEach(ant => {
+            if (ant.name === name) {
+                ant.health += 15;
+                found = true;
+            }
+        });
+
+        if (found) {
+            return "Yum!";
+        } else {
+            return `${name} not found!`;
+        }
+    }
+}
 
     // 🧪 TESTS, do not make any changes below this line ===================
     // 🧪 TESTS, do not make any changes below this line ===================
